# verzendlijst

./: CMakeLists.txt  Makefile  app.py  requirements.txt
.github/workflows/: build.yml
